changes to style and refactor

--- a/frontend/static/style.css
+++ b/frontend/static/style.css
@@ -546,30 +546,43 @@ input {
     border-radius: 20px;
     padding: 10px;
     background-color: var(--main-color);
+    margin-bottom: 10px;
 }
 
 .comment-author {
     color: var(--secondary-color);
     font-size: 15px; 
-    margin-bottom: 10px;
+    margin-bottom: 5px;
+    margin-left: 5px;
 }
 
 .comment-content{
-
+    margin-left: 5px;
 }
 
 .comment .like-dislike-comment-section .like-dislike-comment[data-action="like"] .like-button {
-    width: 18px; /* Example size */
-    height: 18px;
+    margin: 0px 5px;
+    width: 16px;
+    height: 16px;
 }
 
-.comment .like-dislike-comment-section .like-dislike-comment[data-action="dislike"] .dislike-button {
-    width: 18px; /* Example size */
-    height: 18px;
+.comment .like-dislike-comment-section .like-dislike-comment[data-action="like"] .like-button-div {
+    height: 28px;
+    width: 28px;
 }
 
 .comment .like-dislike-comment-section .like-dislike-comment[data-action="like"] .like-count {
     font-size: 15px;
+}
+
+.comment .like-dislike-comment-section .like-dislike-comment[data-action="dislike"] .dislike-button {
+    width: 16px;
+    height: 16px;
+    margin: 0px 5px;
+}
+.comment .like-dislike-comment-section .like-dislike-comment[data-action="dislike"] .dislike-button-div {
+    height: 28px;
+    width: 28px;
 }
 
 .comment .like-dislike-comment-section .like-dislike-comment[data-action="dislike"] .dislike-count {
@@ -577,18 +590,31 @@ input {
 }
 
 .comment .like-dislike-comment-section .like-dislike-comment {
-    margin: 5px 10px
+    margin: 0px 5px
+}
+
+.comment .like-dislike-comment-section {
+    width: 30px;
+}
+
+.new-comment {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0px 5px
 }
 
 .new-comment input {
     width: 88%;
+    margin-bottom: 0px;
+    font-size: 18px;
 }
 
 #add-comment-button, .create-new-post-submit-button {
     background: var(--button-color);
     padding: 10px;
-    margin-left: 10px;
     border-radius: 10px;
+    height: 35px;
     border: none;
     font-size: 15px;
     cursor: pointer;
@@ -621,8 +647,6 @@ input {
     background-color: var(--secondary-color);
     border: none;
 }
-
-
 
 #create-post-form > label{
     color: white;
@@ -859,8 +883,17 @@ input {
     font-size: 30px;
 }
 
-/* Custome Fields */
-.modal {
+#custom-alert-message{
+    opacity: 1;
+    transition: opacity 0.5s ease-in-out; /* Transition effect for opacity */
+}
+
+#custom-alert-message.hidden {
+    opacity: 0;
+}
+
+/* Custome Confirm Fields */
+.confirm-modal {
     position: fixed;
     top: 0;
     left: 0;
@@ -872,15 +905,16 @@ input {
     z-index: 1000;
 }
 
-.modal-content {
-    background-color: #fff;
+.confirm-modal-content {
+    background-color: var(--main-color);
+    color: white;
     padding: 20px;
     border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     text-align: center;
+    border: 1px solid var(--secondary-color);
 }
 
-.modal-button {
+.confirm-modal-button {
     margin: 10px;
     padding: 10px 20px;
     border: none;
@@ -891,8 +925,41 @@ input {
     font-size: 16px;
 }
 
-.modal-button:hover {
+.confirm-modal-button:hover {
     background-color: #5a8a77;
+}
+
+/* Custome Alert Fields */
+.alert-modal {
+    position: fixed;
+    top: 0;
+    right: 0;
+    margin: 10px;
+    width: auto;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.alert-modal-content {
+    background-color: var(--main-color);
+    color: white;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    border: 1px solid var(--secondary-color);
+}
+
+.close-alert {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.close-alert-button {
+    font-size: 20px;
+    cursor: pointer;
 }
 
 
