--- a/frontend/static/style.css
+++ b/frontend/static/style.css
@@ -9,11 +9,9 @@
 
 body, html {
     font-family: 'Jockey One', sans-serif;
-    /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
     background: var(--background-color);
     padding: 0;
     margin: 0;
-    /* overflow: hidden; */
 }
 
 .hidden {
@@ -37,6 +35,10 @@ dialog[open] {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    background-color: var(--background-color);
     border-bottom: 2px solid var(--button-color);
 }
 
@@ -166,11 +168,12 @@ input {
 #sidebar {
     display: flex;
     flex-direction: column;
-    width: 15%;
+    position: fixed;
+    width: 225px;
     height: 90vh;
     padding: 40px;
+    overflow-y: auto;
     box-sizing: border-box;
-    border-right: 2px solid var(--button-color);
 }
 
 #sidebar .section {
@@ -223,8 +226,8 @@ input {
 
 /* Main Content */
 #main-content {
-    width: 85%;
-    padding-left: 40px;
+    width: 100%;
+    padding-left: 245px;
     padding-top: 20px;
     padding-right: 20px;
     box-sizing: border-box;
@@ -365,6 +368,7 @@ input {
     height: 24px;
     display: inline-block;
     background-size: contain;
+    pointer-events: none;
 }
 
 .like-dislike-comment:hover {
@@ -478,6 +482,7 @@ input {
 .post-dialog {
     border: 4px solid var(--button-color);
     width: 1000px;
+    max-height: 800px;
     border-radius: 20px;
     background: var(--background-color);
     color: white;
@@ -527,9 +532,10 @@ input {
     margin-top: 0px;
 }
 
-/* .comment-section {
-    border: 1px solid white;
-} */
+.comment-section {
+    max-height: 300px; /* Adjust this value as needed */
+    overflow-y: auto; /* Enable vertical scrolling */
+}
 
 .comment-line {
     width: 100%;
@@ -601,7 +607,7 @@ input {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0px 5px
+    margin: 10px 5px
 }
 
 .new-comment input {
@@ -960,6 +966,27 @@ input {
 .close-alert-button {
     font-size: 20px;
     cursor: pointer;
+}
+
+/* Custom scrollbar styling */
+::-webkit-scrollbar {
+    width: 12px;
+}
+
+::-webkit-scrollbar-track {
+    background: var(--main-color);
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: var(--button-color);
+    border-radius: 10px;
+    border: 1px solid white;
+    transition: background-color 0.5s;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: darkcyan;
 }
 
 
