--- a/frontend/static/style.css
+++ b/frontend/static/style.css
@@ -174,6 +174,7 @@ input {
     padding: 40px;
     overflow-y: auto;
     box-sizing: border-box;
+    border-right: 1px solid var(--button-color);
 }
 
 #sidebar .section {
@@ -393,7 +394,7 @@ input {
     transition: color 0.2s;
 }
 
-.liked, .comment-liked {
+.liked {
     background-image: url("../static/assets/Like_hover.png");
     width: 24px;
     height: 24px;
@@ -407,7 +408,7 @@ input {
 }
 
 /* Like Button */
-.like-button, .comment-like-button {
+.like-button {
     background-image: url("./assets/Like.png");
     width: 24px;
     height: 24px;
@@ -437,7 +438,7 @@ input {
     color: var(--button-color); 
 }
 
-.disliked, .comment-disliked {
+.disliked {
     background-image: url("../static/assets/Dislike_hover.png");
     width: 24px;
     height: 24px;
@@ -447,7 +448,7 @@ input {
 }
 
 /* Dislike Button */
-.dislike-button, .comment-dislike-button {
+.dislike-button {
     background-image: url("./assets/Dislike.png");
     width: 24px; 
     height: 24px; 
@@ -606,6 +607,15 @@ input {
     margin-left: 5px;
 }
 
+.comment-liked {
+    background-image: url("../static/assets/Like_hover.png");
+    width: 16px;
+    height: 16px;
+    display: inline-block;
+    background-size: contain;
+    pointer-events: none;
+}
+
 .comment-like-button {
     background-image: url("./assets/Like.png");
     margin: 0px 5px;
@@ -619,9 +629,14 @@ input {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 35px;
-    width: 35px;
+    height: 30px;
+    width: 30px;
     transition: background-color 0.3s, border-radius 0.5s;
+}
+
+.comment-like-button-div:hover  {
+    border-radius: 10px;
+    background-color: var(--secondary-color);
 }
 
 .like-dislike-comment:hover .comment-like-button-div {
@@ -629,28 +644,29 @@ input {
     background-color: var(--secondary-color);
 }
 
-#comment-like-number {
+#comment-like-count {
     transition: color 0.3s; 
 }
 
-.like-dislike-comment:hover #comment-like-number {
+.like-dislike-comment:hover #comment-like-count {
     color: var(--button-color); 
 }
 
+
+/* Comment Dislike Button */
 .comment-disliked {
     background-image: url("../static/assets/Dislike_hover.png");
-    width: 24px;
-    height: 24px;
+    width: 16px;
+    height: 16px;
     display: inline-block;
     background-size: contain;
     pointer-events: none;
 }
 
-/* Dislike Button */
 .comment-dislike-button {
     background-image: url("./assets/Dislike.png");
-    width: 24px; 
-    height: 24px; 
+    width: 16px; 
+    height: 16px; 
     display: inline-block;
     background-size: contain;
 }
@@ -659,38 +675,27 @@ input {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 35px;
-    width: 35px;
+    height: 30px;
+    width: 30px;
     transition: background-color 0.3s, border-radius 0.5s;
 }
 
-/* .comment .like-dislike-comment-section .like-dislike-comment[data-action="like"] .like-button {
-    margin: 0px 5px;
-    width: 16px;
-    height: 16px;
+.comment-dislike-button-div:hover  {
+    border-radius: 10px;
+    background-color: var(--secondary-color);
 }
 
-.comment .like-dislike-comment-section .like-dislike-comment[data-action="like"] .like-button-div {
-    height: 28px;
-    width: 28px;
+.like-dislike-comment:hover .comment-dislike-button-div {
+    border-radius: 10px;
+    background-color: var(--secondary-color);
 }
 
-.comment .like-dislike-comment-section .like-dislike-comment[data-action="like"] .like-count {
-    font-size: 15px;
+#comment-dislike-count {
+    transition: color 0.3s; 
 }
 
-.comment .like-dislike-comment-section .like-dislike-comment[data-action="dislike"] .dislike-button {
-    width: 16px;
-    height: 16px;
-    margin: 0px 5px;
-}
-.comment .like-dislike-comment-section .like-dislike-comment[data-action="dislike"] .dislike-button-div {
-    height: 28px;
-    width: 28px;
-}
-
-.comment .like-dislike-comment-section .like-dislike-comment[data-action="dislike"] .dislike-count {
-    font-size: 15px;
+.like-dislike-comment:hover #comment-dislike-count {
+    color: var(--button-color); 
 }
 
 .comment .like-dislike-comment-section .like-dislike-comment {
@@ -705,18 +710,20 @@ input {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    justify-content: center;
     margin: 10px 5px
 }
 
 .new-comment input {
-    width: 88%;
-    margin-bottom: 0px;
+    width: 85%;
+    margin: 10px 10px;
     font-size: 18px;
 }
 
 #add-comment-button, .create-new-post-submit-button {
     background: var(--button-color);
     padding: 10px;
+    margin: 10px;
     border-radius: 10px;
     height: 35px;
     border: none;
@@ -797,6 +804,42 @@ input {
     display: block;
 }
 
+/* Filter Dropdown Menu */
+.filter-dropdown-menu {
+    display: none;
+    position: absolute;
+    background-color: var(--secondary-color);
+    min-width: 200px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    border-radius: 5px;
+    z-index: 999;
+    right: 30px;
+    padding: 20px 10px;
+}
+
+.filter-dropdown-menu > button {
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    font-size: 1em;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+    width: 100%;
+    text-align: left;
+}
+
+.filter-dropdown-menu button:hover {
+    background-color: #f1f1f1;
+    border-radius: 20px;
+    color: black;
+}
+
+#filter-posts-button.show .dropdown-menu {
+    display: block;
+}
+
 .show {
     display: block;
 }
@@ -867,46 +910,35 @@ input {
     background: var(--secondary-color);
 }
 
-#save-user-profile-changes-button {
-    width: 150px;
-    height: 40px;
-    background: var(--button-color);
-    margin: 10px;
-    border-radius: 10px;
-    font-size: 20px;
-    font-family: 'Jockey One', sans-serif;
-    border: none;
-}
-
-#save-user-profile-changes-button:hover {
-    background: var(--button-hover-color);
-    border: none; 
-    color: white;
-}
-
-#save-user-profile-changes-button:active {
-    background: var(--button-active-color);
-    border: none;   
-}
-
-#change-profile-information-form{
+#user-profile-info{
     display: flex;
     flex-direction: column;
+    margin: 20px;
 }
 
 #change-profile-information-form input {
     width: 600px;
 }
 
-.form-group {
+.user-profile-group {
     display: flex;
     justify-content: space-between;
 }
 
-.form-field {
+.user-profile-field {
     display: flex;
     flex-direction: column;
     width: 48%
+}
+
+.user-profile-label {
+    color: white;
+    font-size: 40px;
+}
+
+.user-profile-value {
+    color: var(--secondary-color);
+    font-size: 30px;
 }
 
 .password-field-for-user-profile {
@@ -1115,5 +1147,3 @@ input {
 ::-webkit-scrollbar-thumb:hover {
     background-color: darkcyan;
 }
-
-
