--- a/frontend/static/style.css
+++ b/frontend/static/style.css
@@ -1048,6 +1048,10 @@ input {
     font-size: 30px;
 }
 
+.message-date {
+    font-size: 15px;
+}
+
 #custom-alert-message{
     opacity: 1;
     transition: opacity 0.5s ease-in-out; /* Transition effect for opacity */
